--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,6 @@
 <body>
     <div id="foundinpd_browser" ></div>
     <div id="rimod-ftd" style="position:inherit;margin:0 auto;background:#FFF;max-width: 1600px;"></div>
-    <script type="text/javascript" id="rimod-ftd_js" src="https://www.rimod-ftd.org/rimod-ftd.js" api="https://www.rimod-ftd.org/private"></script>
+    <script type="text/javascript" id="rimod-ftd_js" src="/rimod-ftd.js" api="/private"></script>
 
 </body>
